[gd_scene load_steps=2 format=2]

[ext_resource path="res://EditHighscores.gd" type="Script" id=1]

[node name="EditHighscores" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequestPut" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequestPut" to="." method="_on_HTTPRequestPut_request_completed"]
